New API method (/audit/list) to list AuditLogEntries by modifiedTime and ObjectTypeEnum.
