# src/main/openapi/ds-license-openapi_v1.yaml
@@ -518,7 +518,41 @@ paths:
                 items:
                   $ref: '#/components/schemas/GroupType'
 
-  # Audit
+  # Audit  
+  /audit/list:
+    get:
+      tags:
+        - 'DsAudit'
+      summary: 'Return list of AuditLog entries. Parameters are modifiedTime and changeName, both are optional. Maximum returned is 100. Use modifiedTime for pagination'
+      operationId: getAuditLogList
+      security:
+        - KBOAuth:
+            - ds-license-readonly
+            - ds-license-admin
+      parameters:
+        - name: modifiedTime
+          in: query
+          description: 'List latest Auditlog entries less than modifiedTime. Will default to current time if modifiedTime is not set in request.'
+          schema:
+            type: integer
+            format: int64            
+        - name: changeName
+          in: query
+          description: 'List of auditlog entries of this changeName type. If null will return all changeName types.'
+          schema:
+            $ref: '#/components/schemas/ObjectTypeEnum'
+            nullable: true
+                                                         
+      responses:
+        '200':
+          description: 'List of AuditLogEntryOutput'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/AuditLogEntryOutput'
+  
   /audit/auditEntryById:
     get:
       tags:
@@ -1749,7 +1783,7 @@ components:
           type: string
         textAfter:
           type: string
-
+  
     RestrictedIdInput:
       type: object
       required:
@@ -2160,7 +2194,8 @@ components:
           type: integer
           format: int32
           description: 'Number of records updated'
-
+          
+          
   securitySchemes:
     KBOAuth:
       type: oauth2
